--- a/Issue-Tracking-System/app/app.css
+++ b/Issue-Tracking-System/app/app.css
@@ -49,3 +49,10 @@ input.ng-invalid.ng-dirty{
   padding: 0;
 }
 
+img{
+  width: 40px;
+  height: 40px;
+  margin-bottom: -20px;
+  margin-right: 20px;
+}
+
